--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.profiles.include=oauth
+#spring.profiles.include=oauth
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
+
+spring.security.oauth2.client.registration.google.client-id=356241709761-rddjtkhc2i73ns3101orsroinlg5cq40.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=279Bs_np20AZ8pmW-xGXHu9v
+spring.security.oauth2.client.registration.google.scope=profile,email
