--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     
     testCompile 'org.springframework.security:spring-security-test'
      
-	annotationProcessor 'org.projectlombok:lombok'	
+	annotationProcessor 'org.projectlombok:lombok'
+	compile 'org.mariadb.jdbc:mariadb-java-client'	
 
 }
 
