--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ deploy:
       access_key_id: $AWS_ACCESS_KEY
       secret_access_key: $ACCESS_SECRET_KEY
       bucket: a2student8-springboot-webservice   # S3 버킷
+      key: springboot-webservice.zip
+      bundle_type: zip
+      application: springboot-webservice     # AWS 콘솔에서 등록한 CodeDeploy 애플리케이션
+      deployment_group: springboot-webservice-group             #  CodeDeploy 배포 그룹
       region: ap-northeast-2                           # S3 버킷 리전
       skip_cleanup: true
       acl: private
