--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,20 @@ script: "./gradlew clean build"
 
 before_deploy:
     # 현재 위치의 모든 파일을 springboot-webservice 이름으로 압축
-    - zip -r springboot-webservice *
+    # - zip -r springboot-webservice *
     # Travis CI 실행되는 위치에 deploy 디렉터리를 생성 
-    - mkdir -p deploy
+    # - mkdir -p deploy
     # 압축 파일을 deploy 디렉터리로 이동
-    - mv springboot-webservice.zip deploy/springboot-webservice.zip
+    # - mv springboot-webservice.zip deploy/springboot-webservice.zip
+    - mkdir -p before-deploy
+    - cp scripts/*.sh before-deploy/       # deploy.sh
+    - cp appspec.yml before-deploy/        # apspec.yml - codedeploy 설정
+    - cp build/libs/*.war before-deploy/   # springboot-webservice-xxx.war 
+    
+    - cd before-deploy && zip -r before-deploy *
+    
+    - cd .. && mkdir -p deploy
+    - mv before-deploy/before-deploy.zip deploy/springboot-webservice.zip
 
 deploy:
     - provider: s3
